--- a/chamber/index.html
+++ b/chamber/index.html
@@ -112,6 +112,7 @@
           <li><a href="discover.html">Discover</a></li>
           <li><a href="directory.html">Directory</a></li>
           <li><a href="join.html">Join</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
 
@@ -158,11 +159,11 @@
         </div>
 
         <picture class="hero-pic">
-          <source media="(max-width:400px )" srcset="images/hero-small.jpg" />
+          <!-- <source media="(max-width:400px )" srcset="images/hero-small.jpg" />
           <source media="(max-width:800px )" srcset="images/hero-medium.jpg" />
-          <source media="(min-width:800px )" srcset="images/hero-large.jpg" />
+          <source media="(min-width:800px )" srcset="images/hero-large.jpg" /> -->
 
-          <img src="images/hero-regular-img.jpg" alt="hero-image" />
+          <img src="images/hero img.jpeg" alt="hero image" />
         </picture>
       </div>
       <div class="news">
