--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -141,7 +141,7 @@
           <strong>Phone:</strong> 801.309.2908
         </li>
         <li>
-          <strong>Human Resources:</strong> Miller William
+          <strong>Human Resources:</strong> <br />Miller William
           <strong>Phone:</strong> 801.987.4987
         </li>
         <li>
