--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -143,7 +143,7 @@
           <strong>Phone:</strong>&nbsp; 801.309.2908
         </li>
         <li>
-          <strong>Human Resources:</strong> &nbsp; Miller William &nbsp;
+          <strong>Human Resources:</strong> &nbsp; <br />Miller William &nbsp;
           <strong>Phone:</strong>&nbsp; 801.987.4987
         </li>
         <li>
