--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -125,28 +125,30 @@
         <h2>General Information</h2>
         <br />
 
-        <li><strong>Address:</strong> 167 Main Street, Lehi, Ut, 84043</li>
-        <li><strong>Phone:</strong> (801) 456-7890</li>
-        <li><strong>Email:</strong> info@ywildriverchamber.com</li>
+        <li>
+          <strong>Address:</strong>&nbsp; 167 Main Street, Lehi, Ut, 84043
+        </li>
+        <li><strong>Phone:</strong>&nbsp; (801) 456-7890</li>
+        <li><strong>Email:</strong>&nbsp; info@wildriverchamber.com</li>
       </ul>
       <ul class="officer-list">
         <h2>Chamber Officers and Board of Directors</h2>
 
         <li>
-          <strong>Mayor:</strong> Logan Ashley
-          <strong>Phone:</strong> 801.567.7890
+          <strong>Mayor: </strong>&nbsp; Logan Ashley &nbsp;
+          <strong>Phone: </strong>&nbsp; 801.567.7890 &nbsp;
         </li>
         <li>
-          <strong>City Clerk:</strong> Smith Cody
-          <strong>Phone:</strong> 801.309.2908
+          <strong>City Clerk:</strong>&nbsp; Smith Cody &nbsp;
+          <strong>Phone:</strong>&nbsp; 801.309.2908
         </li>
         <li>
-          <strong>Human Resources:</strong> <br />Miller William
-          <strong>Phone:</strong> 801.987.4987
+          <strong>Human Resources:</strong>&nbsp; Miller William &nbsp;
+          <strong>Phone:</strong>&nbsp; 801.987.4987
         </li>
         <li>
-          <strong>City Council:</strong> Cook John
-          <strong>Phone:</strong> 801.768.4523
+          <strong>City Council:</strong> &nbsp; Cook John &nbsp;
+          <strong>Phone:</strong>&nbsp; 801.768.4523
         </li>
       </ul>
       <h2>Contact Form</h2>
@@ -190,7 +192,6 @@
       </div>
     </footer>
     <script src="scripts/script.js"></script>
-    <script src="scripts/banner.js"></script>
     <script src="scripts/chamber-weatherapi.js"></script>
   </body>
 </html>
