--- a/chamber/index.html
+++ b/chamber/index.html
@@ -181,18 +181,26 @@
       </div>
       <section class="box">
         <div class="box1">
-          <h1>Come Join Us</h1>
+          <h1>Bucked Up</h1>
           <picture class="spot1">
-            <img src="images/i9-picture.png" alt="" />
+            <img src="images/buckedup-img.webp" alt="" />
           </picture>
+          <p><strong>Phone:</strong>&nbsp; 855 205-2825</p>
         </div>
         <div class="box2">
-          <h1>Grand Opening</h1>
+          <h1>Brighton</h1>
           <picture class="spot2">
-            <img src="images/spotlight-2.jpeg" alt="" />
+            <img src="images/Brighton-img.png" alt="" />
           </picture>
+          <p><strong>Phone:</strong>&nbsp; 801 532-4731</p>
         </div>
-        <div class="box3">Spotlight 3</div>
+        <div class="box3">
+          <h1>Synergy Pest Control</h1>
+          <picture class="spot2">
+            <img src="images/synergy-img.png" alt="" />
+          </picture>
+          <p><strong>Phone:</strong>&nbsp; 801 889-2972</p>
+        </div>
       </section>
     </main>
 
