--- a/chamber/index.html
+++ b/chamber/index.html
@@ -15,7 +15,7 @@
       content="This page will be help to built a better networking in the community"
     />
   </head>
-  <body>
+  <body class="body-container">
     <header>
       <div class="section_1">
         <div class="logo">
@@ -181,11 +181,11 @@
       </div>
       <section class="box">
         <div class="box1">
-          <h1>Bucked Up</h1>
+          <h1>Slapfish</h1>
           <picture class="spot1">
-            <img src="images/buckedup-img.webp" alt="" />
+            <img src="images/slapfish-img.png" alt="" />
           </picture>
-          <p><strong>Phone:</strong>&nbsp; 855 205-2825</p>
+          <p><strong>Phone:</strong>&nbsp; 385 455-4110</p>
         </div>
         <div class="box2">
           <h1>Brighton</h1>
