--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <a href="chamber/directory.html">The Business Directory Page</a>
         </li>
         <li><a href="chamber/index.html">Using the Weather API</a></li>
-        <li>Lesson 11</li>
+        <li><a href="chamber/index.html">The Chamber of Commerce Site</a></li>
       </ul>
       <hr />
       <p>Some lessons may need more than one activity/assigment link.</p>
