--- a/chamber/index.html
+++ b/chamber/index.html
@@ -116,7 +116,7 @@
         </ul>
       </nav>
 
-      <p class="date"><span id="date"></span></p>
+      <h2 class="date"><span id="date"></span></h2>
     </header>
     <main>
       <div class="event">
