--- a/chamber/index.html
+++ b/chamber/index.html
@@ -19,7 +19,7 @@
     <header>
       <div class="section_1">
         <div class="logo">
-          <img src="images/new-logo.PNG" alt="logo" />
+          <img src="images/new-logo.PNG" alt="webpage logo" />
         </div>
 
         <div class="name">
@@ -183,21 +183,21 @@
         <div class="box1">
           <h1>Slapfish</h1>
           <picture class="spot1">
-            <img src="images/slapfish-img.png" alt="" />
+            <img src="images/slapfish-img.png" alt="company logo" />
           </picture>
           <p><strong>Phone:</strong>&nbsp; 385 455-4110</p>
         </div>
         <div class="box2">
           <h1>Brighton</h1>
           <picture class="spot2">
-            <img src="images/Brighton-img.png" alt="" />
+            <img src="images/Brighton-img.png" alt="company logo" />
           </picture>
           <p><strong>Phone:</strong>&nbsp; 801 532-4731</p>
         </div>
         <div class="box3">
           <h1>Synergy Pest Control</h1>
           <picture class="spot2">
-            <img src="images/synergy-img.png" alt="" />
+            <img src="images/synergy-img.png" alt="company logo" />
           </picture>
           <p><strong>Phone:</strong>&nbsp; 801 889-2972</p>
         </div>
@@ -207,7 +207,7 @@
     <footer>
       <section class="info_box">
         <div class="logo">
-          <img src="images/new-logo.PNG" alt="" />
+          <img src="images/new-logo.PNG" alt="webpage logo" />
         </div>
         <div class="contact">
           <h2>Wild River Chamber</h2>
