--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -19,7 +19,7 @@
     <header>
       <div class="section_1">
         <div class="logo">
-          <img src="images/new-logo.PNG" alt="logo" />
+          <img src="images/new-logo.PNG" alt="webpage logo" />
         </div>
 
         <div class="name">
@@ -172,7 +172,7 @@
     <footer>
       <section class="info_box">
         <div class="logo">
-          <img src="images/new-logo.PNG" alt="" />
+          <img src="images/new-logo.PNG" alt="webpage logo" />
         </div>
         <div class="contact">
           <h2>Wild River Chamber</h2>
