--- a/chamber/index.html
+++ b/chamber/index.html
@@ -163,7 +163,7 @@
           <source media="(max-width:800px )" srcset="images/hero-medium.jpg" />
           <source media="(min-width:800px )" srcset="images/hero-large.jpg" /> -->
 
-          <img src="images/hero img.jpeg" alt="hero image" />
+          <img src="images/hero-img.jpeg" alt="hero image" />
         </picture>
       </div>
       <div class="news">
