--- a/chamber/index.html
+++ b/chamber/index.html
@@ -128,7 +128,8 @@
         <h1>Weather</h1>
         <p><span id="current-temp"></span> &deg;F</p>
         <figure>
-          <img id="weather-icon" />
+          <img src="" alt="weather icon" id="weather-icon" />
+
           <figcaption></figcaption>
           <div id="wind-speed"></div>
           <div id="wind-chill"></div>
