--- a/project/amysolution/amysolution.html
+++ b/project/amysolution/amysolution.html
@@ -17,9 +17,9 @@
       </picture>
       <nav>
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Fresh</a></li>
-          <li><a href="#">About Us</a></li>
+          <li><a href="#">Inicio</a></li>
+          <li><a href="#">Historia</a></li>
+          <li><a href="#">Equipos</a></li>
         </ul>
       </nav>
     </header>
