--- a/project/amysolution/amysolution.html
+++ b/project/amysolution/amysolution.html
@@ -13,7 +13,7 @@
         <h1>AmySolution</h1>
       </div>
       <picture class="logo">
-        <img src="" alt="" />
+        <img src="images/logo.jpeg" alt="" />
       </picture>
       <nav>
         <ul>
