--- a/project/amysolution/amysolution.html
+++ b/project/amysolution/amysolution.html
@@ -45,7 +45,9 @@
     </main>
     <footer>
       <picture class="social">
-        <img src="images/Facebook-icon.png" alt="" />
+        <a href="https://www.facebook.com/amysolution">
+          <img src="images/Facebook-icon.png" alt="" />
+        </a>
         <img src="images/instagram_icon.png" alt="" />
       </picture>
       <div class="last-updated">
