--- a/amysolution/amysolution.html
+++ b/amysolution/amysolution.html
@@ -9,9 +9,7 @@
   </head>
   <body>
     <header>
-      <div>
-        <img src="" alt="" />
-      </div>
+      <div></div>
       <div class="name">
         <h1>AmySolution</h1>
       </div>
