--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -19,11 +19,9 @@
     <header>
       <div class="section_1">
         <div class="logo">
-          <<<<<<< HEAD
           <img src="images/new-logo.PNG" alt="webpage logo" />
-          =======
-          <img src="images/new-logo.PNG" alt="logo" />
-          >>>>>>> 57677a5 (changes)
+
+          <!-- <img src="images/new-logo.PNG" alt="logo" /> -->
         </div>
 
         <div class="name">
