--- a/chamber/index.html
+++ b/chamber/index.html
@@ -164,11 +164,9 @@
           <source media="(max-width:800px )" srcset="images/hero-medium.jpg" />
           <source media="(min-width:800px )" srcset="images/hero-large.jpg" /> -->
 
-          <<<<<<< HEAD
-          <img src="images/hero-img.jpeg" alt="hero image" />
-          =======
+          <!-- <img src="images/hero-img.jpeg" alt="hero image" /> -->
+
           <img src="images/hero img.jpeg" alt="hero image" />
-          >>>>>>> 57677a5 (changes)
         </picture>
       </div>
       <div class="news">
