--- a/project/index.html
+++ b/project/index.html
@@ -18,12 +18,13 @@
       <nav>
         <ul>
           <li><a href="#">Home</a></li>
-          <li><a href="#">Fresh</a></li>
+          <li><a href="fresh.html">Fresh</a></li>
           <li><a href="#">About Us</a></li>
         </ul>
       </nav>
     </header>
     <main>
+      <div id="total-drinks">Total Specialty Drinks Submitted: 0</div>
       <div class="hero">
         <picture>
           <img src="images/fuits.jpeg" alt="" />
