--- a/project/index.html
+++ b/project/index.html
@@ -17,13 +17,13 @@
       </picture>
       <nav>
         <ul>
-          <li><a href="#">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="fresh.html">Fresh</a></li>
-          <li><a href="#">About Us</a></li>
+          <li><a href="about-us.html">About Us</a></li>
         </ul>
       </nav>
     </header>
-    <main>
+    <main class="main-container">
       <div id="total-drinks">Total Specialty Drinks Submitted: 0</div>
       <div class="hero">
         <picture>
@@ -72,10 +72,10 @@
     </main>
 
     <footer>
-      <picture class="social">
+      <div class="social">
         <img src="images/Facebook-icon.png" alt="" />
         <img src="images/instagram_icon.png" alt="" />
-      </picture>
+      </div>
       <div class="last-updated">
         <p>
           &copy;<span id="year"></span> | Bountiful Food | .:|:. Erick Patino
