--- a/project/fresh.html
+++ b/project/fresh.html
@@ -18,7 +18,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="fresh.html">Fresh</a></li>
-          <li><a href="#">About Us</a></li>
+          <li><a href="about-us.html">About Us</a></li>
         </ul>
       </nav>
     </header>
@@ -65,7 +65,7 @@
         </p>
       </div>
     </footer>
-
+    <script src="scripts/lastUpdate.js"></script>
     <script src="scripts/fresh.js"></script>
   </body>
 </html>
