--- a/project/about-us.html
+++ b/project/about-us.html
@@ -23,7 +23,7 @@
       </nav>
     </header>
 
-    <main>
+    <main class="fresh-section">
       <div class="title"><h1>About Us</h1></div>
       <div class="history">
         <h2>Our History</h2>
@@ -54,7 +54,7 @@
           <strong>Address:</strong><br />1234 Fruit Street, Santa Monica, CA
           90401
         </p>
-        <p><strong>Phone:</strong> <br />(123) 456-7890</p>
+        <p><strong>Phone:</strong> <br />(801) 456-7890</p>
         <p><strong>Email:</strong> <br />info@bountifulfood.com</p>
         <p>
           <strong>Website:</strong>
@@ -95,15 +95,25 @@
     </main>
     <footer>
       <div class="social">
-        <img src="images/Facebook-icon.png" alt="" />
-        <img src="images/instagram_icon.png" alt="" />
+        <a href="https://www.facebook.com/" target="_blank">
+          <img src="images/Facebook-icon.png" alt=""
+        /></a>
+        <a href="https://www.instagram.com/" target="_blank">
+          <img src="images/instagram_icon.png" alt=""
+        /></a>
       </div>
+
       <div class="last-updated">
         <p>
           &copy;<span id="year"></span> | Bountiful Food | .:|:. Erick Patino
           .:|:. | WDD 230 Project | Last Updated:
           <span id="date-time"></span>
         </p>
+      </div>
+      <div class="contact-us">
+        <h1>Conctact Us</h1>
+        <p><strong>Phone:</strong> <br />(801) 456-7890</p>
+        <p><strong>Email:</strong> <br />info@bountifulfood.com</p>
       </div>
     </footer>
     <script src="scripts/lastUpdate.js"></script>
