--- a/project/fresh.html
+++ b/project/fresh.html
@@ -53,16 +53,26 @@
       <div id="order-details"></div>
     </main>
     <footer>
-      <picture class="social">
-        <img src="images/Facebook-icon.png" alt="" />
-        <img src="images/instagram_icon.png" alt="" />
-      </picture>
+      <div class="social">
+        <a href="https://www.facebook.com/" target="_blank">
+          <img src="images/Facebook-icon.png" alt=""
+        /></a>
+        <a href="https://www.instagram.com/" target="_blank">
+          <img src="images/instagram_icon.png" alt=""
+        /></a>
+      </div>
+
       <div class="last-updated">
         <p>
           &copy;<span id="year"></span> | Bountiful Food | .:|:. Erick Patino
           .:|:. | WDD 230 Project | Last Updated:
           <span id="date-time"></span>
         </p>
+      </div>
+      <div class="contact-us">
+        <h1>Conctact Us</h1>
+        <p><strong>Phone:</strong> <br />(801) 456-7890</p>
+        <p><strong>Email:</strong> <br />info@bountifulfood.com</p>
       </div>
     </footer>
     <script src="scripts/lastUpdate.js"></script>
