--- a/project/index.html
+++ b/project/index.html
@@ -73,9 +73,14 @@
 
     <footer>
       <div class="social">
-        <img src="images/Facebook-icon.png" alt="" />
-        <img src="images/instagram_icon.png" alt="" />
+        <a href="https://www.facebook.com/" target="_blank">
+          <img src="images/Facebook-icon.png" alt=""
+        /></a>
+        <a href="https://www.instagram.com/" target="_blank">
+          <img src="images/instagram_icon.png" alt=""
+        /></a>
       </div>
+
       <div class="last-updated">
         <p>
           &copy;<span id="year"></span> | Bountiful Food | .:|:. Erick Patino
@@ -83,8 +88,14 @@
           <span id="date-time"></span>
         </p>
       </div>
+      <div class="contact-us">
+        <h1>Conctact Us</h1>
+        <p><strong>Phone:</strong> <br />(801) 456-7890</p>
+        <p><strong>Email:</strong> <br />info@bountifulfood.com</p>
+      </div>
     </footer>
     <script src="scripts/lastUpdate.js"></script>
     <script src="scripts/weathercard.js"></script>
+    <script src="scripts/total-drinks.js"></script>
   </body>
 </html>
