--- a/project/about-us.html
+++ b/project/about-us.html
@@ -17,13 +17,23 @@
       <picture class="logo">
         <img src="images/Bountiful-logo.png" alt="Webpage Logo" />
       </picture>
-      <button id="mobile-menu-button">&#9776;</button>
-      <nav>
-        <ul id="mobile-menu">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="fresh.html">Fresh</a></li>
-          <li><a href="about-us.html">About Us</a></li>
+      <nav class="navbar">
+        <ul class="nav-menu">
+          <li class="nav-item">
+            <a href="index.html" class="nav-link">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="fresh.html" class="nav-link">Fresh</a>
+          </li>
+          <li class="nav-item">
+            <a href="about-us.html" class="nav-link">About Us</a>
+          </li>
         </ul>
+        <div class="hamburger">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
       </nav>
     </header>
 
