--- a/project/index.html
+++ b/project/index.html
@@ -15,7 +15,10 @@
         <h1>Bountiful Food</h1>
       </div>
       <picture class="logo">
-        <img src="images/Bountiful-logo.png" alt="Webpage Logo" />
+        <a href="index.html"
+          ><img src="images/Bountiful-logo.png" alt="webpage Logo"
+        /></a>
+        <!-- <img src="images/Bountiful-logo.png" alt="Webpage Logo" /> -->
       </picture>
 
       <nav class="navbar">
