--- a/project/about-us.html
+++ b/project/about-us.html
@@ -15,7 +15,9 @@
         <h1>Bountiful Food</h1>
       </div>
       <picture class="logo">
-        <img src="images/Bountiful-logo.png" alt="Webpage Logo" />
+        <a href="index.html"
+          ><img src="images/Bountiful-logo.png" alt="webpage Logo"
+        /></a>
       </picture>
       <nav class="navbar">
         <ul class="nav-menu">
