--- a/chamber/index.html
+++ b/chamber/index.html
@@ -100,7 +100,7 @@
 
           <!-- <img src="images/hero-img.jpeg" alt="hero image" /> -->
 
-          <img src="images/hero img.jpeg" alt="hero image" />
+          <img src="images/hero-pic-img.jpeg" alt="hero image" />
         </picture>
       </div>
       <div class="news">
