--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -26,84 +26,17 @@
           <h1>The Wild River Chamber</h1>
         </div>
         <div class="social">
-          <a href="https://facebook.com">
-            <?xml version="1.0" ?><!DOCTYPE svg PUBLIC '-//W3C//DTD SVG 1.0//EN' 'http://www.w3.org/TR/2001/REC-SVG-20010904/DTD/svg10.dtd'>
-            <svg
-              enable-background="new 0 0 32 32"
-              height="32px"
-              id="Layer_1"
-              version="1.0"
-              viewBox="0 0 32 32"
-              width="32px"
-              xml:space="preserve"
-              xmlns="http://www.w3.org/2000/svg"
-              xmlns:xlink="http://www.w3.org/1999/xlink"
-            >
-              <g>
-                <circle
-                  clip-rule="evenodd"
-                  cx="16"
-                  cy="16"
-                  fill="#3B5998"
-                  fill-rule="evenodd"
-                  r="16"
-                />
-                <path
-                  d="M22,32V20h4l1-5h-5v-2c0-2,1.002-3,3-3h2V5c-1,0-2.24,0-4,0c-3.675,0-6,2.881-6,7v3h-4v5h4v12H22   z"
-                  fill="#FFFFFF"
-                  id="f_2_"
-                />
-              </g>
-              <g />
-              <g />
-              <g />
-              <g />
-              <g />
-              <g />
-            </svg>
-          </a>
-          <a href="https://www.linkedin.com/">
-            <?xml version="1.0" ?><!DOCTYPE svg PUBLIC '-//W3C//DTD SVG 1.0//EN' 'http://www.w3.org/TR/2001/REC-SVG-20010904/DTD/svg10.dtd'>
-            <svg
-              enable-background="new 0 0 32 32"
-              height="32px"
-              id="Layer_1"
-              version="1.0"
-              viewBox="0 0 32 32"
-              width="32px"
-              xml:space="preserve"
-              xmlns="http://www.w3.org/2000/svg"
-              xmlns:xlink="http://www.w3.org/1999/xlink"
-            >
-              <g>
-                <circle
-                  clip-rule="evenodd"
-                  cx="16"
-                  cy="16"
-                  fill="#007BB5"
-                  fill-rule="evenodd"
-                  r="16"
-                />
-                <g>
-                  <rect fill="#FFFFFF" height="14" width="4" x="7" y="11" />
-                  <path
-                    d="M20.499,11c-2.791,0-3.271,1.018-3.499,2v-2h-4v14h4v-8c0-1.297,0.703-2,2-2c1.266,0,2,0.688,2,2v8h4v-7    C25,14,24.479,11,20.499,11z"
-                    fill="#FFFFFF"
-                  />
-                  <circle cx="9" cy="8" fill="#FFFFFF" r="2" />
-                </g>
-              </g>
-              <g />
-              <g />
-              <g />
-              <g />
-              <g />
-              <g />
-            </svg>
-          </a>
+          <a href="https://www.facebook.com/" target="_blank">
+            <img src="images/Facebook_icon.png" alt="Social Facebook Icon"
+          /></a>
+          <a href="https://www.instagram.com/" target="_blank">
+            <img src="images/instagram-icon.png" alt="Social Intagram Icon"
+          /></a>
+          <a href="https://www.twitter.com/" target="_blank">
+            <img src="images/Twitter_icon.png" alt="Social Twitter Icon"
+          /></a>
         </div>
       </div>
-
       <nav>
         <button id="button">&#9776;</button>
         <ul id="navigation">
