--- a/chamber/index.html
+++ b/chamber/index.html
@@ -116,7 +116,7 @@
           Tempore similique dicta nulla aliquid!
         </p>
       </div>
-      <section class="box">
+      <section id="spotlight-container">
         <div class="box1">
           <h1>Slapfish</h1>
           <picture class="spot1">
@@ -166,5 +166,6 @@
     <script src="scripts/script.js"></script>
     <script src="scripts/banner.js"></script>
     <script src="scripts/chamber-weatherapi.js"></script>
+    <script src="scripts/spotlight.js"></script>
   </body>
 </html>
