--- a/chamber/index.html
+++ b/chamber/index.html
@@ -117,7 +117,7 @@
         </p>
       </div>
       <section id="spotlight-container">
-        <div class="box1">
+        <!-- <div class="box1">
           <h1>Slapfish</h1>
           <picture class="spot1">
             <img src="images/slapfish-img.png" alt="company logo" />
@@ -137,7 +137,7 @@
             <img src="images/synergy-img.png" alt="company logo" />
           </picture>
           <p><strong>Phone:</strong>&nbsp; 801 889-2972</p>
-        </div>
+        </div> -->
       </section>
     </main>
 
