--- a/Bountiful Food.html
+++ b/Bountiful Food.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <!-- saved from url=(0040)http://127.0.0.1:5500/project/index.html -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="http://127.0.0.1:5500/project/images/favicon.ico">
+<html lang="en">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="http://127.0.0.1:5500/project/images/favicon.ico" />
     <title>Bountiful Food</title>
-    <link rel="stylesheet" href="./Bountiful Food_files/small.css">
+    <link rel="stylesheet" href="./Bountiful Food_files/small.css" />
   </head>
   <body>
     <header>
@@ -13,20 +15,25 @@
         <h1>Bountiful Food</h1>
       </div>
       <picture class="logo">
-        <img src="./Bountiful Food_files/Bountiful-logo.png" alt="Webpage Logo">
+        <img
+          src="./Bountiful Food_files/Bountiful-logo.png"
+          alt="Webpage Logo"
+        />
       </picture>
       <nav>
         <ul>
           <li><a href="http://127.0.0.1:5500/project/index.html#">Home</a></li>
           <li><a href="http://127.0.0.1:5500/project/index.html#">Fresh</a></li>
-          <li><a href="http://127.0.0.1:5500/project/index.html#">About Us</a></li>
+          <li>
+            <a href="http://127.0.0.1:5500/project/index.html#">About Us</a>
+          </li>
         </ul>
       </nav>
     </header>
     <main>
       <div class="hero">
         <picture>
-          <img src="./Bountiful Food_files/fuits.jpeg" alt="">
+          <img src="./Bountiful Food_files/fuits.jpeg" alt="" />
         </picture>
         <div class="button">
           <h1>🍹🍊 Create Your Own Fresh Fruit Drink Mix! 🍓🍍</h1>
@@ -48,13 +55,16 @@
         </div>
       </div>
       <div class="summary">
-        <img src="./Bountiful Food_files/Southern-California.png" alt="Southern California">
+        <img
+          src="./Bountiful Food_files/Southern-California.png"
+          alt="Southern California"
+        />
 
         <p>
           Location: Santa Monica is situated on the southern coast of
           California, bordered by the Pacific Ocean to the west. It is
           approximately 16 miles (26 kilometers) west of downtown Los Angeles.
-          <br>
+          <br />
           Climate: Santa Monica enjoys a Mediterranean climate characterized by
           mild, pleasant winters and warm, dry summers. Average temperatures
           range from around 55°F (13°C) in winter to 75°F (24°C) in summer. The
@@ -72,8 +82,8 @@
 
     <footer>
       <picture class="social">
-        <img src="./Bountiful Food_files/Facebook-icon.png" alt="">
-        <img src="./Bountiful Food_files/instagram_icon.png" alt="">
+        <img src="./Bountiful Food_files/Facebook-icon.png" alt="" />
+        <img src="./Bountiful Food_files/instagram_icon.png" alt="" />
       </picture>
       <div class="last-updated">
         <p>
@@ -85,44 +95,57 @@
     </footer>
     <script src="./Bountiful Food_files/lastUpdate.js"></script>
     <script src="./Bountiful Food_files/chamber-weatherapi.js"></script>
-  <!-- Code injected by live-server -->
-<script>
-	// <![CDATA[  <-- For SVG support
-	if ('WebSocket' in window) {
-		(function () {
-			function refreshCSS() {
-				var sheets = [].slice.call(document.getElementsByTagName("link"));
-				var head = document.getElementsByTagName("head")[0];
-				for (var i = 0; i < sheets.length; ++i) {
-					var elem = sheets[i];
-					var parent = elem.parentElement || head;
-					parent.removeChild(elem);
-					var rel = elem.rel;
-					if (elem.href && typeof rel != "string" || rel.length == 0 || rel.toLowerCase() == "stylesheet") {
-						var url = elem.href.replace(/(&|\?)_cacheOverride=\d+/, '');
-						elem.href = url + (url.indexOf('?') >= 0 ? '&' : '?') + '_cacheOverride=' + (new Date().valueOf());
-					}
-					parent.appendChild(elem);
-				}
-			}
-			var protocol = window.location.protocol === 'http:' ? 'ws://' : 'wss://';
-			var address = protocol + window.location.host + window.location.pathname + '/ws';
-			var socket = new WebSocket(address);
-			socket.onmessage = function (msg) {
-				if (msg.data == 'reload') window.location.reload();
-				else if (msg.data == 'refreshcss') refreshCSS();
-			};
-			if (sessionStorage && !sessionStorage.getItem('IsThisFirstTime_Log_From_LiveServer')) {
-				console.log('Live reload enabled.');
-				sessionStorage.setItem('IsThisFirstTime_Log_From_LiveServer', true);
-			}
-		})();
-	}
-	else {
-		console.error('Upgrade your browser. This Browser is NOT supported WebSocket for Live-Reloading.');
-	}
-	// ]]>
-</script>
-
-
-</body></html>
+    <!-- Code injected by live-server -->
+    <script>
+      // <![CDATA[  <-- For SVG support
+      if ("WebSocket" in window) {
+        (function () {
+          function refreshCSS() {
+            var sheets = [].slice.call(document.getElementsByTagName("link"));
+            var head = document.getElementsByTagName("head")[0];
+            for (var i = 0; i < sheets.length; ++i) {
+              var elem = sheets[i];
+              var parent = elem.parentElement || head;
+              parent.removeChild(elem);
+              var rel = elem.rel;
+              if (
+                (elem.href && typeof rel != "string") ||
+                rel.length == 0 ||
+                rel.toLowerCase() == "stylesheet"
+              ) {
+                var url = elem.href.replace(/(&|\?)_cacheOverride=\d+/, "");
+                elem.href =
+                  url +
+                  (url.indexOf("?") >= 0 ? "&" : "?") +
+                  "_cacheOverride=" +
+                  new Date().valueOf();
+              }
+              parent.appendChild(elem);
+            }
+          }
+          var protocol =
+            window.location.protocol === "http:" ? "ws://" : "wss://";
+          var address =
+            protocol + window.location.host + window.location.pathname + "/ws";
+          var socket = new WebSocket(address);
+          socket.onmessage = function (msg) {
+            if (msg.data == "reload") window.location.reload();
+            else if (msg.data == "refreshcss") refreshCSS();
+          };
+          if (
+            sessionStorage &&
+            !sessionStorage.getItem("IsThisFirstTime_Log_From_LiveServer")
+          ) {
+            console.log("Live reload enabled.");
+            sessionStorage.setItem("IsThisFirstTime_Log_From_LiveServer", true);
+          }
+        })();
+      } else {
+        console.error(
+          "Upgrade your browser. This Browser is NOT supported WebSocket for Live-Reloading."
+        );
+      }
+      // ]]>
+    </script>
+  </body>
+</html>
